add crud operations (cqrs)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,5 @@ mongock:
     change-logs-scan-package:
         - by.zmitser.webapp.reactivities.config
     runner-type: applicationrunner
+reactor:
+    core:
