--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -2,7 +2,7 @@
   "name": "webapp",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:8081",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,15 +12,21 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-widgets": "^4.4.3",
+    "@types/revalidate": "^1.1.2",
     "axios": "^0.20.0",
     "mobx": "^6.0.1",
     "mobx-react-lite": "^3.0.1",
     "objectid": "^3.2.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-final-form": "^6.5.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "react-toastify": "^6.1.0",
+    "react-widgets": "^4.6.1",
+    "react-widgets-date-fns": "^4.1.2",
+    "revalidate": "^1.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
     "typescript": "^3.7.5"
